--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -6,18 +6,23 @@ on:
       - update
     paths:
       - 'update.json'
+  workflow_dispatch:
+
+concurrency:
+  group: update-release
+  cancel-in-progress: true
 
 jobs:
   update_module_prop:
     runs-on: ubuntu-latest
+    name: Update module.prop
+    if: needs.check_recent_commit.outputs.should_run == 'true'
     steps:
-      - name: Checkout main branch
-        uses: actions/checkout@v4.2.2
+      - uses: actions/checkout@v2
         with:
           ref: main
 
-      - name: Checkout update branch
-        uses: actions/checkout@v4.2.2
+      - uses: actions/checkout@v2
         with:
           ref: update
           path: update_branch
@@ -44,17 +49,16 @@ jobs:
           git commit -m "Update version and versionCode from update.json"
           git push
 
-  release_update:
+  build_and_create_release:
     runs-on: ubuntu-latest
     needs: update_module_prop
+    if: needs.check_recent_commit.outputs.should_run == 'true'
     steps:
-      - name: Checkout main branch
-        uses: actions/checkout@v4.2.2
+      - uses: actions/checkout@v2
         with:
           ref: main
 
-      - name: Checkout update branch
-        uses: actions/checkout@v4.2.2
+      - uses: actions/checkout@v2
         with:
           ref: update
           path: update_branch
@@ -72,18 +76,60 @@ jobs:
           git archive --format zip --output=Boot-Anima.zip HEAD
           zip -r Boot-Anima.zip . -x "*.github/workflows/*"
 
-      - name: Create release with tag "latest"
-        uses: softprops/action-gh-release@v2.2.1
+      - name: Delete Existing Release
+        id: delete_release
+        uses: actions/github-script@v6
         with:
+          script: |
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
+            const tag = "latest";
+      
+            // List all releases and find the release by tag
+            const releases = await github.rest.repos.listReleases({
+              owner: owner,
+              repo: repo,
+            });
+      
+            const release = releases.data.find(release => release.tag_name === tag);
+      
+            // Check if the release exists and delete it
+            if (release) {
+              await github.rest.repos.deleteRelease({
+                owner: owner,
+                repo: repo,
+                release_id: release.id,
+              });
+              console.log(`Deleted release with ID ${release.id}`);
+            } else {
+              console.log("No existing release to delete");
+            }
+      
+            // Delete the tag
+            try {
+              await github.rest.git.deleteRef({
+                owner: owner,
+                repo: repo,
+                ref: `tags/${tag}`,
+              });
+              console.log(`Deleted tag ${tag}`);
+            } catch (error) {
+              console.error(`Error deleting tag: ${error.message}`);
+            }
+
+      - name: Nightly Release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: Boot-Anima Release [${{ env.VERSION }}]
+          tag_name: latest
+          body: |
+            **This release has been built by Github Actions**
+            [Link to build](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+
+            Build Version: ${{ env.VERSION }}
+
+            Change Log:
+            ${{ env.CHANGELOG }}
           files: Boot-Anima.zip
-          tag: latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VERSION: ${{ env.VERSION }}
-          CHANGELOG: ${{ env.CHANGELOG }}
-
-      - name: Add release description
-        run: |
-          curl -X PATCH -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -d "{\"body\": \"${{ env.CHANGELOG }}\"}" \
-          "https://api.github.com/repos/${{ github.repository }}/releases/latest"
